<resources>
    <string name="app_name">ScreamForScrum</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_board">NewBoardActivity</string>
    <string name="specs">SPECS</string>
    <string name="plus">+</string>
    <string name="colText">Col</string>
    <string name="rowText">Row</string>
    <string name="priorityText">Priority</string>
    <string name="whoText">Who</string>
    <string name="addMember">Add a Member</string>
    <string name="createButton">Create</string>
    <string name="updateButton">Update</string>
    <string name="deleteButton">Delete</string>
    <string name="title_activity_edit_post">EditPost</string>
</resources>
