<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.scrumboard.PostIt"
    android:background="@color/backblue">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title"
        android:id="@+id/postTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="35dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_below="@+id/postTitle"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:background="@color/postIt">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/specs"
            android:id="@+id/spectitle"
            android:clickable="true"
            android:textColor="@color/black"
            android:textAlignment="center" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="2"
            android:padding="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:id="@+id/colText"
                    android:text="@string/colText"
                    android:textSize="25dp"/>

                <Spinner
                    android:id="@+id/spinner1"
                    android:singleLine="true"
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:background="@color/buttonblue"
                    android:spinnerMode="dropdown" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:id="@+id/rowText"
                    android:text="@string/rowText"
                    android:textSize="25dp"/>

                <Spinner
                    android:id="@+id/spinner2"
                    android:singleLine="true"
                    android:layout_width="400dp"
                    android:gravity="center"
                    android:layout_height="50dp"
                    android:background="@color/buttonblue"
                    android:spinnerMode="dropdown" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:id="@+id/priorityText"
                    android:text="@string/priorityText"
                    android:textSize="25dp"/>

                <Spinner
                    android:id="@+id/spinner3"
                    android:singleLine="true"
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:background="@color/buttonblue"
                    android:spinnerMode="dropdown" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:id="@+id/whoText"
                    android:text="@string/whoText"
                    android:textSize="25dp"/>

                <Spinner
                    android:id="@+id/spinner4"
                    android:singleLine="true"
                    android:layout_width="200dp"
                    android:gravity="center"
                    android:layout_height="50dp"
                    android:background="@color/buttonblue"
                    android:spinnerMode="dropdown" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:background="@color/postIt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Notes"
            android:id="@+id/notes"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/buttonblue"
            android:layout_below="@id/notes"
            android:id="@+id/postDescription"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_above="@+id/updateButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateButton"
            android:id="@+id/updateButton"
            android:background="@color/buttonblue"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/notes"
            android:layout_toStartOf="@+id/notes" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteButton"
            android:id="@+id/deleteButton"
            android:background="@color/buttonblue"
            android:layout_alignTop="@+id/updateButton"
            android:layout_toRightOf="@+id/notes"
            android:layout_toEndOf="@+id/notes" />
    </RelativeLayout>


</RelativeLayout>
